# articles

./: .gitignore  Articles.code-workspace  library.bib  main.tex
ASA2013/: asa2013.kilepr  asa2013.tex  ica2013_2.cls  library.bib
ASA2013/common/: ica2013_2.cls  ica_num.tex  template.bib
ASA2013/gfx/: 3dCovarianceMatrix.blend  benchmark.eps  benchmark_tagged.eps  buildR-breakdown-memory.eps  buildR-breakdown.eps  img_holmengraa.eps  img_holmengraa.ps  mvdr_build_R.eps  mvdr_build_R_full.eps  mvdr_complexity.eps  mvdr_implementation.eps  plot_holmengraa_L16_Navg1.eps
ASA2013/presentation/: presentation.tex
CaponOnSpeed/: jrnl_article.tex
ECUA2012/: ecua2012.kilepr  gpu_capon_ecua2012.tex
ECUA2012/gfx/: capon_build_R_full.eps
ECUA2012/presentation/: ecua2012-presentation.kilepr  presentation.tex
ECUA2012/template/: ECUA_2012_template.tex  ecua.bib  ecua.bst  ecua.sty
FFI-Simulator/: ffi-documentation.tex  ffi-simulator.kilepr  ffi-simulator.tex
FFI-Simulator/common/: mytemplate.cls
FFI-Simulator/gfx/: simple_buffer_shadow.blend  simple_buffer_shadow.blend1  simple_buffer_shadow.blend2
FFI-Simulator/src/: gant_diagram-chart.html  gant_diagram-resources.html  gant_diagram-tasks.html  gant_diagram.gan  gant_diagram.html
GPUCapon/: gpu_capon.tex
GPUCapon/gfx/: capon_build_R.eps
HRUIofMovingObjects/: diff.tex  jrnl_article.tex  jrnl_article_1st.tex  mybib.bib  response_to_reviewers.tex
HRUIofMovingObjects/img/: LSV_capon.eps  LSV_capon_10pr.eps  LSV_das.eps  LSV_image.eps  beamprofile.eps  capon_L=32_K=1_d=001_10x_oversampling_2_PR.eps  capon_L=32_K=1_d=001_10x_oversampling_2_zoomed.eps  capon_L=32_K=1_d=001_10x_oversampling_2_zoomed_PR.eps  capon_L=32_K=1_d=001_2.eps  capon_L=32_K=1_d=001_2MLA_and_2x_microsteering.eps  capon_L=32_K=1_d=001_2MLA_and_2x_microsteering_correct_pitch.eps  capon_L=32_K=1_d=001_2x.eps  capon_L=32_K=1_d=001_2x_microsteering.eps  capon_L=32_K=1_d=001_2x_microsteering_correct_pitch.eps  capon_L=32_K=1_d=001_2x_oversampling_2.eps  capon_L=32_K=1_d=001_4x.eps  capon_L=32_K=1_d=001_4x_microsteering.eps  capon_L=32_K=1_d=001_4x_microsteering_correct_pitch.eps  capon_L=32_K=1_d=001_4x_oversampling_2_PR.eps  capon_L=32_K=1_d=001_4x_oversampling_2_PR_zoomed.eps  capon_L=32_K=1_d=001_4x_oversampling_2_zoomed.eps  capon_L=32_K=1_d=001_normal.eps  capon_L=32_K=1_d=1_2.eps  capon_L=32_K=1_d=1_normal.eps  das_no_undersampling.eps  das_no_undersampling2.eps  das_normal2.eps  das_undersampled2_2x.eps  das_undersampled_2x.eps  fig1_1way.eps  fig1_2way.eps  fig2a.eps  fig2b.eps  fig3a.eps  fig3b.eps  fig4a.eps  fig4b.eps  fig5a.eps  fig5b.eps  fig6a.eps  (+4 more)
HRUIofMovingObjects/movies/: Multimedia-index.txt
HRUIonGPU/: Makefile  conf_article.tex  document.tex  fieldII.bib  jrnl_article.tex  kai.bib  macros.tex  mybib - Copy.bib  mybib.bib  mybib_conf.bib
HRUIonGPU/1st submit/: jrnl_article.tex
HRUIonGPU/2nd submit/: jrnl_article_bak.tex
HRUIonGPU/final submit/: answer_to_reviewers.docx
HRUIonGPU/gfx/: all_plots.py  gpu_layout_bs.eps  gpu_layout_bs_2.eps  gpu_layout_vertical.eps  make_plots.py  timer_values_32_40_400.txt  timer_values_32_80_400.txt  timer_values_64_80_400.txt  timer_values_M=32_Nx=40_Ny=400_L=2-16.txt  timer_values_M=32_Nx=40_Ny=400_L=2-16_Nb=11.txt  timer_values_M=32_Nx=40_Ny=400_L=2-16_Nb=3.txt  timer_values_M=64_Nx=80_Ny=400_L=2-32.txt  timer_values_M=64_Nx=80_Ny=400_L=2-32_Nb=11.txt  timer_values_M=64_Nx=80_Ny=400_L=2-32_Nb=3.txt  timer_values_M=64_Nx=80_Ny=400_L=2-32_Nb=3_slidingBS.txt  timer_values_M=64_Nx=80_Ny=540_L=16-48_Nb=3.txt  timer_values_M=64_Nx=80_Ny=540_L=2-32.txt  timer_values_M=64_Nx=80_Ny=606_L=16-48_Nb=3.txt  timer_values_M=64_Nx=80_Ny=606_L=2-32.txt  timer_values_M=64_Nx=80_Ny=606_L=32_Nb=1-5.txt  timer_values_M=96_Nx=120_Ny=400_L=2-48.txt  timer_values_M=96_Nx=120_Ny=400_L=2-48_Nb=11.txt  timer_values_M=96_Nx=120_Ny=400_L=2-48_Nb=3.txt  timer_values_M=96_Nx=120_Ny=400_L=3-48_Nb=3_slidingBS.txt  timer_values_M=96_Nx=120_Ny=540_L=24-72_Nb=3.txt  timer_values_M=96_Nx=120_Ny=606_L=24-72_Nb=3.txt  timer_values_M=96_Nx=120_Ny=606_L=48_Nb=1-5.txt  timer_values_info.txt
HRUIonGPU/photos/: andreas.eps  carl-inge.eps  jo_inge.eps  jon_petter.eps  sverre.eps
HRUIonGPU/retningslinjer_uffc/: Memory-constitutive.bib  aberrated.tex
HowtoHowtoCapon/: IEEEtran.bst  diff.tex  document.tex  howto-howto-capon.kilepr  howto_howto_capon.tex  library.bib  macros.tex  mybib.bib
HowtoHowtoCapon/bio/: andreas.eps  andreas_austeng.tex  carl-inge_nilsen.tex  jo_inge_buskenes.tex  jon_petter_aasen.tex
HowtoHowtoCapon/gfx/: algorithm_structure.eps  beamforming.eps  benchmark.eps  benchmark.ps  benchmark_boston.eps  benchmark_boston_bw.eps  benchmark_bw.eps  buildR-breakdown.eps  (+20 more)
LCA/: article.tex  article2.tex
LCAforActiveSonarImaging/: document.tex  lca (MP078's conflicted copy 2016-05-03).tex  lca.kilepr  lca.tex  lca_diff.tex  lca_formula.tex  lca_rev1.tex  lca_rev1_diff.tex  lca_review1.tex  lca_submit1.tex  lca_submit2.tex  macros.tex  macros2.tex  preamble.tex  ref2.bib  references.bib
SiPS2012/: jp-sips2012.kilepr  sips2012.aux  sips2012.tex
Simulator/: CMakeLists.txt  article.bak.tex  article.kilepr  article.tex  derivations.tex  document.tex  macros.tex  notes.tex  references.bib
ThesisJP/: Thesis.tex  documentproperties.tex
ThesisJo/: 0_article_header.tex  1_introduction.tex  2_background.tex  2_mvdr.tex  2_publications.tex  3_discussion.tex  3_lca.tex  3_publications.tex  4_discussion.tex  CMakeLists.txt  IIII_simulator.tex  III_lca.tex  II_mvdr_ultrasound.tex  I_mvdr.tex  abstract.tex  background.tex  derivations.tex  frontmatter.tex  glossary.tex  header.tex  introduction.tex  literature_review.tex  litterature_review.tex  preface.tex  publications.tex  references.bib  subfooter.tex  subheader.in.tex  subheader.tex  thesis.kilepr  thesis.tex  thesis_2.tex  todo.txt  variables.tex
ThesisJo/common/: mytemplate.cls  uiophd.cls
ThesisJo/gfx/: scenario_interference0001.xcf
ThesisJo/src/: derivations.py
UAM2011/: UAM2011_Paper_Template.doc
UAM2013/: WhatWeLearned.odt
UAM2014/: Outline.docx
(+539 files in other folders)
